[tool.poetry]
name = "catfeeder"
version = "0.1.0"
description = ""
authors = ["Jake <jakethagle@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
Flask-RESTful = "^0.3.9"
flake8 = "^3.9.2"
black = "^21.5b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
